<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="10dp"
    android:background="@color/colorHalfWhite"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="385dp"
        android:layout_height="401dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="25dp"
            android:text="@string/LoginIn_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:autofillHints="Enter username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:background="#ffffff"
                android:drawableStart="@drawable/ic_mail_black_24dp"
                android:hint="@string/EnterEmail_name"
                android:inputType="text"
                android:padding="5dp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:passwordToggleDrawable="@drawable/show_password_selector"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPurple">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:background="#ffffff"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:hint="@string/EnterPassword_name"
                android:inputType="textPassword"
                android:padding="5dp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorPurple"
            android:text="@string/Login_name"
            android:textColor="#fff"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="358dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ForgotPassword_name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NoAccount_name" />

            <TextView
                android:id="@+id/CreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/CreateAccount_name"
                android:textColor="@color/colorPurple" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarLogIn"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:theme="@style/progressBarBlue"/>


</androidx.constraintlayout.widget.ConstraintLayout>