<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuDisplayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/tab_color_selector"
            app:tabIndicatorColor="@color/design_default_color_on_primary"
            app:tabIndicatorHeight="4dp"
            app:tabSelectedTextColor="@color/design_default_color_on_primary"
            app:tabTextColor="@android:color/darker_gray">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/meter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Meter"
                />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Status" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/charts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Charts" />
        </com.google.android.material.tabs.TabLayout>


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.viewpager.widget.ViewPager>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>